--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="wrap"><!--contenedor que agrupa elementos de acuerdo al tema-->
               
             </div>
+            <div class="wrap1">W1</div>
             <div class="wrap2">W2</div>
             <div class="wrap3">W3</div>
             <div class="wrap4">W4</div>
