avance uno del header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>MiDossier|Petri</title>
 </head>
 <body>
+    <header class="barra">
+        <figure class="ima"><img src="" alt="LOGO"></figure>
+        <nav class="menu">
+            <ol>
+                <li>Inicio</li>
+                <li>blog</li>
+            </ol>
+        </nav>
+    </header>
     <div class="conteiner col-12"><!--contenedor que agrupa toda la estructura del sitio -->
       	  <div class="item row">item #1</div>
           <div class="item">item #2</div>
