implementando el grid - apenas empezando

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <figure class="ima"><img src="" alt="LOGO"></figure>
         <nav class="menu">
             <ol>
-                <li>Inicio</li>
-                <li>blog</li>
+                <li><a href="">Inicio</a></li>
+                <li><a href="">blog</a></li>
             </ol>
         </nav>
     </header>
-    <div class="conteiner col-12"><!--contenedor que agrupa toda la estructura del sitio -->
+    <div class="conteiner"><!--contenedor que agrupa toda la estructura del sitio -->
       	  <div class="item row">item #1</div>
           <div class="item">item #2</div>
           <div class="item">item #3</div>
