agregando contenido en item 1 - sin estilos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
         </nav>
     </header>
     <div class="conteiner"><!--contenedor que agrupa toda la estructura del sitio -->
-      	  <div class="item row">item #1</div>
+      	  <div class="item">
+                <h1>3 Técnicas para aprender lo que sea</h1>
+                <hr>
+                <p>
+                    Una de las habilidades más importantes, 
+                    es cómo aprender de una manera eficiente 
+                    para el mayor provecho de cursos, libros o 
+                    blogposts, cualquier tema que queramos aprender 
+                    y colocarlo en nuestro currículum para seguir 
+                    creciendo de manera personal o profesional.
+                </p>
+                <p>
+                    Con la educación tradicional muchas veces 
+                    optamos por memorizar todo a última hora 
+                    para un examen, parcial, exposición y sacar 
+                    la mayor calificación posible para demostrar 
+                    que hemos aprendido todo lo que nos han enseñado… 
+                    Pero ¿actualmente recuerdas algo de todo eso?
+                </p>
+            </div>
           <div class="item">item #2</div>
         
           
