--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </nav>
     </header>
     <div class="hero">
+        <div class="hero-title">DOSIER</div>
         <figure>
             <img src="cdesk.jpg" alt="">
         </figure>
