coloco el nombre del blog

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <div class="hero">
-        <div class="hero-title">DOSIER</div>
+        <div class="hero-title"><h1>DOSSIER DE YAGO</h1></div>
         <figure>
             <img src="cdesk.jpg" alt="">
         </figure>
