terminamos home... y subint... listo

--- a/subin1.html
+++ b/subin1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet"href="css/grid.css" />
     <link rel="stylesheet" type="text/css" href="css/subesti1.css">
-    <title>MiDossier|Petri</title>
+    <title>MiDossier|Post</title>
 </head>
 <body>
     <header class="barra">
