--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
             </div>
            
     </div>
-    <footer class="foo">ESTE ES EL FOOTER</footer>
+    <footer class="foo">
+        <div class="fooo"><p> esta pagina se diseño inspirado en un blog de w</p></div>
+    </footer>
 </body> 
 </html>
