arregando el color del menu

--- a/subin1.html
+++ b/subin1.html
@@ -12,8 +12,8 @@
         
         <nav class="menu">
             <ol>
-                <li class="y"><a href="">Inicio</a></li>
-                <li><a href="">blog</a></li>
+                <li><a href="">Inicio</a></li>
+                <li class="y"><a href="">blog</a></li>
             </ol>
         </nav>
     </header>
@@ -56,5 +56,8 @@
             </div>
            
     </div>
+    <footer class="foo">
+        <div class="fooo"><p> esta pagina se diseño inspirado en un blog de w</p></div>
+    </footer>
 </body> 
 </html>
