--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="menu">
             <ol>
                 <li class="y"><a href="">Inicio</a></li>
-                <li><a href="">blog</a></li>
+                <li><a href="subin1.html">blog</a></li>
             </ol>
         </nav>
     </header>
